--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 assignments/A1/in/flowers
-src/intermediate_python_data
+assignments/A3/data/Tobacco3482
+in-class/src/intermediate_python_data
+in-class/data
