--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 assignments/A1/in/flowers
 assignments/A3/in/Tobacco3482
+assignments/A4/data/newspapers
 in-class/src/intermediate_python_data
 in-class/data
