--- a/assignments/A3/requirements.txt
+++ b/assignments/A3/requirements.txt
@@ -1,5 +1,4 @@
-matplotlib
-scikit-learn
-pandas
-seaborn
-tensorflow-cpu
+matplotlib==3.8.4
+numpy==1.26.4
+scikit_learn==1.4.2
+tensorflow==2.16.1
