--- a/assignments/A4/requirements.txt
+++ b/assignments/A4/requirements.txt
@@ -1,4 +1,6 @@
-facenet_pytorch==2.5.3
-matplotlib==3.8.4
+facenet_pytorch==2.6.0
+matplotlib==3.9.0
 pandas==2.2.2
-Pillow==10.3.0
+Pillow==10.2.0
+seaborn==0.13.2
+tqdm==4.66.4
